--- a/myapp/package.json
+++ b/myapp/package.json
@@ -15,6 +15,10 @@
     "jade": "~1.3.0"
   },
   "devDependencies": {
+    "gulp": "^3.8.6",
+    "gulp-concat": "^2.3.3",
+    "gulp-jshint": "^1.7.1",
+    "gulp-uglify": "^0.3.1",
     "mysql": "^2.4.0",
     "should": "^4.0.4",
     "supertest": "^0.13.0"
