--- a/myapp/Vagrantfile
+++ b/myapp/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   
   config.vm.box_url = "http://files.vagrantup.com/precise32.box"
-
+  config.vm.network "forwarded_port", guest: 3000, host: 3000
   config.vm.provision "ansible" do |ansible|
         ansible.playbook = "deploy/playbook.yml"
         ansible.verbose = "vvvv"
