--- a/myapp/deploy/roles/mysql/tasks/main.yml
+++ b/myapp/deploy/roles/mysql/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+- name: update_apt_repository
+  apt: update_cache=yes
 - name: Install MySQL
   action: apt pkg={{item}} state=installed
   with_items:
