--- a/myapp/package.json
+++ b/myapp/package.json
@@ -6,20 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "jade": "~1.3.0"
-  },
-  "devDependencies": {
+    "express": "~4.2.0",
     "gulp": "^3.8.6",
     "gulp-concat": "^2.3.3",
     "gulp-jshint": "^1.7.1",
     "gulp-uglify": "^0.3.1",
+    "jade": "~1.3.0",
+    "morgan": "~1.0.0",
     "mysql": "^2.4.0",
+    "pm2": "^0.9.2",
+    "static-favicon": "~1.0.0"
+  },
+  "devDependencies": {
     "should": "^4.0.4",
     "supertest": "^0.13.0"
   }
